GNOME Bugzilla – Bug 763110
Invalid cast between GdkOffscreenWindow and GdkWindowImplWayland on Glade
Last modified: 2016-03-05 01:07:06 UTC
Created attachment 323109 [details] stack trace When I'm running Glade on top of Wayland, it crashes whenever I right-click in the widget preview canvas. Running it with GDB, it shows me that the issue always happen on gdk_wayland_window_get_fake_root_coords() function (see attached stack trace).